--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -86,7 +86,7 @@
             >
               <span class="icon-create-poll"></span>
               {{ 'poll.create' | translate }}
-              <img alt="" class="icon-create-poll" src="assets/icn_umfrage_erstellen.svg">
+              <img aria-hidden="true" alt="" class="icon-create-poll" src="assets/icn_umfrage_erstellen.svg">
             </button>
           </div>
         </div>
