--- a/src/app/links/links.component.html
+++ b/src/app/links/links.component.html
@@ -65,7 +65,7 @@
                 data-id="inviteLinkNavigate"
               >
                 {{ 'links.invite.open' | translate }}
-                <img alt="" width="30" height="30" ngSrc="assets/icn_umfrage_erstellen_primary.svg">
+                <img aria-hidden="true" alt="" width="30" height="30" ngSrc="assets/icn_umfrage_erstellen_primary.svg">
               </a>
             </div>
           </div>
@@ -128,7 +128,7 @@
                 data-id="adminLinkNavigate"
               >
                 {{ 'links.admin.open' | translate }}
-                <img alt="" width="30" height="30" ngSrc="assets/icn_umfrage_erstellen_primary.svg">
+                <img aria-hidden="true" alt="" width="30" height="30" ngSrc="assets/icn_umfrage_erstellen_primary.svg">
               </a>
             </div>
           </div>
@@ -149,7 +149,7 @@
               data-id="surveyLinkNavigate"
             >
               {{ 'links.satisfactionSurveyButton' | translate }}
-              <img alt="" src="assets/icn_umfrage_erstellen_primary.svg">
+              <img aria-hidden="true" alt="" src="assets/icn_umfrage_erstellen_primary.svg">
             </a>
           </div>
         </div>
