--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -65,10 +65,11 @@
               >
                 <span class="icon-create-poll"></span>
                 {{ 'poll.participate' | translate }}
-                <img alt="{{ 'poll.participate' | translate }}"
-                     class="icon-create-poll"
-                     src="assets/icn_umfrage_erstellen.svg"
-                >
+                <img
+                  aria-hidden="true"
+                  alt=""
+                  class="icon-create-poll"
+                  src="assets/icn_umfrage_erstellen.svg">
               </button>
             }
             @if (isAdmin) {
@@ -81,10 +82,11 @@
               >
                 <span class="icon-create-poll"></span>
                 {{ 'poll.edit' | translate }}
-                <img alt="{{ 'poll.edit' | translate }}"
-                     class="icon-create-poll"
-                     src="assets/icn_umfrage_erstellen.svg"
-                >
+                <img
+                  aria-hidden="true"
+                  alt="{{ 'poll.edit' | translate }}"
+                  class="icon-create-poll"
+                  src="assets/icn_umfrage_erstellen.svg">
               </button>
             }
           </div>
