--- a/src/app/shared/components/poll-options/poll-options.component.html
+++ b/src/app/shared/components/poll-options/poll-options.component.html
@@ -2,27 +2,24 @@
   <div class="row g-1">
     <div class="col-4 d-flex justify-content-center">
       <img
-        alt=""
         aria-hidden="true"
+        alt=""
         class="poll-option-icon"
-        src="assets/status_declined.svg"
-      >
+        src="assets/status_declined.svg">
     </div>
     <div class="col-4 d-flex justify-content-center">
       <img
-        alt=""
         aria-hidden="true"
+        alt=""
         class="poll-option-icon"
-        src="assets/status_questionable.svg"
-      >
+        src="assets/status_questionable.svg">
     </div>
     <div class="col-4 d-flex justify-content-center">
       <img
-        alt=""
         aria-hidden="true"
+        alt=""
         class="poll-option-icon"
-        src="assets/status_accepted.svg"
-      >
+        src="assets/status_accepted.svg">
     </div>
   </div>
   <div [formGroup]="formGroup" class="row g-1 mt-1">
