--- a/src/app/create-appointment/create-appointment.component.html
+++ b/src/app/create-appointment/create-appointment.component.html
@@ -24,7 +24,7 @@
              class="form-group-divider form-group">
           <div class="row g-0">
             <div class="col-auto d-flex justify-content-end align-items-center icon-frame">
-              <img alt="key" class="icon m-2 mt-3 mt-lg-4" src="assets/title.svg">
+              <img aria-hidden="true" alt="" class="icon m-2 mt-3 mt-lg-4" src="assets/title.svg">
             </div>
             <div class="col invalid-message-highlight">
               <label data-id="titleLabel" for="title">{{ 'poll.title.placeholder' | translate }}</label>
@@ -80,7 +80,7 @@
              class="form-group-divider form-group">
           <div class="row g-0">
             <div class="col-auto d-flex justify-content-end align-items-center icon-frame">
-              <img alt="key" class="icon m-2 mt-3 mt-lg-4" src="assets/user.svg">
+              <img aria-hidden="true" alt="" class="icon m-2 mt-3 mt-lg-4" src="assets/user.svg">
             </div>
             <div class="col invalid-message-highlight">
               <label data-id="nameLabel" for="name">{{ 'poll.details.name.yourName' | translate }}</label>
@@ -138,7 +138,7 @@
              class="form-group-divider form-group">
           <div class="row g-0">
             <div class="col-auto d-flex justify-content-end align-items-center icon-frame">
-              <img alt="Ort" class="icon m-2 mt-3 mt-lg-4" src="assets/location.svg">
+              <img aria-hidden="true" alt="" class="icon m-2 mt-3 mt-lg-4" src="assets/location.svg">
             </div>
             <div class="col invalid-message-highlight">
               <label data-id="locationLabel" for="location">{{ 'poll.details.place.placeOptional' | translate }}</label>
@@ -182,7 +182,7 @@
              class="form-group-divider form-group">
           <div class="row g-0">
             <div class="col-auto d-flex justify-content-end align-items-center icon-frame">
-              <img alt="Sprechblase" class="icon m-2 mt-3 mt-lg-4" src="assets/description.svg">
+              <img aria-hidden="true" alt="" class="icon m-2 mt-3 mt-lg-4" src="assets/description.svg">
             </div>
             <div class="col invalid-message-highlight">
               <label
