--- a/src/app/poll/mobile-poll-table.component.html
+++ b/src/app/poll/mobile-poll-table.component.html
@@ -5,9 +5,13 @@
       <!-- add button ^ dropdown & edit button (only visible when _not_ in add or edit mode) -->
       @if (!formHelper.hasAddOrEditParticipantForm()) {
         <div class="col-auto mx-1">
-          <button (click)="formHelper.addParticipant()" class="btn btn-round btn-secondary btn-add-participant"
-                  type="button">
-            <img alt="plus" class="icon" src="assets/add-user.svg"/>
+          <button
+            (click)="formHelper.addParticipant()"
+            class="btn btn-round btn-secondary btn-add-participant"
+            type="button"
+            title="{{ 'poll.addParticipant' | translate}}"
+          >
+            <img aria-hidden="true" alt="" class="icon" src="assets/add-user.svg">
           </button>
         </div>
         @if (formHelper.hasParticipants()) {
@@ -22,10 +26,13 @@
             </select>
           </div>
           <div class="col-auto px-1">
-            <button (click)="formHelper.editParticipant(getSelectedParticipant())"
-                    class="btn btn-transparent p-0 border-0"
-                    type="button">
-              <img alt="pencil" class="icon icon-edit" src="assets/edit.svg"/>
+            <button
+              (click)="formHelper.editParticipant(getSelectedParticipant())"
+              class="btn btn-transparent p-0 border-0"
+              type="button"
+              title="{{ 'poll.editParticipant' | translate}}"
+            >
+              <img aria-hidden="true" alt="" class="icon icon-edit" src="assets/edit.svg">
             </button>
           </div>
         }
@@ -47,10 +54,13 @@
           </div>
           <div class="col-auto px-1">
             <!-- button to delete the currently edited participant -->
-            <button (click)="formHelper.deleteEditParticipant(getSelectedParticipant())"
-                    class="btn btn-trash btn-transparent p-0 border-0"
-                    type="button">
-              <img alt="trashcan" class="icon icon-delete" src="assets/trash.svg"/>
+            <button
+              (click)="formHelper.deleteEditParticipant(getSelectedParticipant())"
+              class="btn btn-trash btn-transparent p-0 border-0"
+              type="button"
+              title="{{ 'poll.deleteParticipant' | translate}}"
+            >
+              <img aria-hidden="true" alt="" class="icon icon-delete" src="assets/trash.svg">
             </button>
           </div>
           <div class="w-100"></div>
@@ -100,7 +110,7 @@
                       title="{{ 'poll.downloadIcs' | translate }}"
                       type="button"
                     >
-                      <img alt="{{ 'poll.downloadIcs' | translate }}" aria-hidden="true" src="assets/download.svg">
+                      <img aria-hidden="true" alt="" src="assets/download.svg">
                     </button>
                   </div>
                 }
@@ -109,9 +119,12 @@
             <td class="total-participants">
               <div class="px-1 d-flex justify-content-start align-items-center">
                 <div class="voting-status-summary-image">
-                  <img alt="checkmark" aria-hidden="true" src="assets/status_accepted.svg">
+                  <img aria-hidden="true" alt="" src="assets/status_accepted.svg">
                 </div>
-                <div class="font-weight-bold voting-status-summary-number mx-1">
+                <div
+                  class="font-weight-bold voting-status-summary-number mx-1"
+                  [attr.aria-description]="'poll.acceptedNum' | translate"
+                >
                   {{ formHelper.getNumberOfAcceptedVotingsBySuggestedDate(date.suggestedDateId) }}
                 </div>
               </div>
@@ -120,7 +133,8 @@
               <!--suppress HtmlUnknownTarget the image path is generated dynamically -->
               @if (!formHelper.hasAddOrEditParticipantForm() && getSelectedParticipant()) {
                 <img
-                  alt="voting-status" aria-hidden="true"
+                  aria-hidden="true"
+                  alt=""
                   class="my-auto mr-3 ml-auto d-block poll-option-icon"
                   src="assets/status_{{
                     formHelper.getVotingStatusBySuggestedDateIdAndParticipantId(
@@ -161,7 +175,7 @@
               title="{{ 'poll.downloadCsv' | translate }}"
               type="button"
             >
-              <img alt="" aria-hidden="true" src="assets/calendar_grey.svg">
+              <img aria-hidden="true" alt="" src="assets/calendar_grey.svg">
             </button>
             <span class="font-small ms-2">
               {{ 'poll.downloadCsvDescription' | translate }}
