--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -39,7 +39,7 @@
           </div>
           <div class="row g-0 invalid-message-highlight">
             <div class="col-1 d-flex justify-content-end align-items-center">
-              <img alt="key" class="icon m-2" src="assets/password.svg">
+              <img aria-hidden="true" alt="" class="icon m-2" src="assets/password.svg">
             </div>
             <input
               required
@@ -91,7 +91,7 @@
           </div>
           <div class="row g-0 invalid-message-highlight">
             <div class="col-1 d-flex justify-content-end align-items-center">
-              <img alt="key" class="icon m-2" src="assets/password.svg">
+              <img aria-hidden="true" alt="" class="icon m-2" src="assets/password.svg">
             </div>
             <input
               required
