--- a/src/app/shared/components/appointment-summary/appointment-summary.component.html
+++ b/src/app/shared/components/appointment-summary/appointment-summary.component.html
@@ -1,7 +1,7 @@
 @if (showAppointmentUrl && absoluteAppointmentUrl) {
   <div class="row g-0 mb-3">
     <div class="col-auto align-self-center mr-2">
-      <img alt="url" aria-hidden="true" class="icon" src="assets/calendar_grey.svg"/>
+      <img aria-hidden="true" alt="" class="icon" src="assets/calendar_grey.svg"/>
     </div>
     <div class="col align-self-top">
       <div class="header" data-cy="overviewUrlLabel">{{ 'poll.details.url.url' | translate }}</div>
@@ -15,7 +15,7 @@
           ngxClipboard
           type="button"
         >
-          <img alt="{{ 'links.copy' | translate }}" class="icon" src="assets/copy.svg"/>
+          <img alt="{{ 'links.copy' | translate }}" class="icon" src="assets/copy.svg">
         </button>
       </div>
     </div>
@@ -24,7 +24,7 @@
 @if (showUsername && appointment.name) {
   <div class="row g-0 mb-3">
     <div class="col-auto align-self-center mr-2">
-      <img alt="user" aria-hidden="true" class="icon" src="assets/user.svg"/>
+      <img aria-hidden="true" alt="" class="icon" src="assets/user.svg"/>
     </div>
     <div class="col align-self-top">
       <div class="header" data-cy="overviewNameLabel">{{ 'poll.details.name.name' | translate }}</div>
@@ -35,7 +35,7 @@
 @if (appointment.title) {
   <div class="row g-0 mb-3">
     <div class="col-auto align-self-center mr-2">
-      <img alt="title" aria-hidden="true" class="icon" src="assets/title.svg"/>
+      <img aria-hidden="true" alt="" class="icon" src="assets/title.svg"/>
     </div>
     <div class="col align-self-top">
       <div class="header" data-cy="overviewTitleLabel">{{ 'poll.title.title' | translate }}</div>
@@ -46,7 +46,7 @@
 @if (appointment.location) {
   <div class="row g-0 mb-3">
     <div class="col-auto align-self-center mr-2">
-      <img alt="location" aria-hidden="true" class="icon" src="assets/location.svg"/>
+      <img aria-hidden="true" alt="" class="icon" src="assets/location.svg"/>
     </div>
     <div class="col align-self-top">
       <div class="header" data-cy="overviewPlaceLabel">{{ 'poll.details.place.place' | translate }}</div>
@@ -57,11 +57,11 @@
 @if (appointment.description) {
   <div class="row g-0 mb-3">
     <div class="col-auto align-self-center mr-2">
-      <img alt="description" aria-hidden="true" class="icon" src="assets/description.svg"/>
+      <img aria-hidden="true" alt="" class="icon" src="assets/description.svg"/>
     </div>
     <div class="col align-self-top">
-      <div class="header"
-           data-cy="overviewDescriptionLabel">{{ 'poll.details.description.description' | translate }}
+      <div class="header" data-cy="overviewDescriptionLabel">
+        {{ 'poll.details.description.description' | translate }}
       </div>
       <div data-cy="overviewDescriptionValue" id="descriptionContainer">
         <div #description [innerHTML]="getDescription()" id="description"></div>
@@ -72,12 +72,12 @@
 @if (showDeleteWarning) {
   <div class="row g-0 mb-3">
     <div class="col-auto align-self-center mr-2">
-      <img alt="delete" aria-hidden="true" class="icon" src="assets/delete_gray.svg"/>
+      <img aria-hidden="true" alt="" class="icon" src="assets/delete_gray.svg"/>
     </div>
     <div class="col align-self-top">
       <div class="header" data-cy="overviewDeleteLabel">{{ 'poll.details.delete.deleteDate' | translate }}</div>
-      <div class="value" data-cy="overviewDeleteValue"
-           id="delete">{{ 'poll.details.delete.willBeDeleted' | translate }}
+      <div class="value" data-cy="overviewDeleteValue" id="delete">
+        {{ 'poll.details.delete.willBeDeleted' | translate }}
       </div>
     </div>
   </div>
