fix: layout break

--- a/src/app/links/links.component.html
+++ b/src/app/links/links.component.html
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-9">
-            <div class="row g-1 flex-wrap flex-md-nowrap justify-content-end">
+            <div class="row g-1 flex-md-nowrap justify-content-end">
               <button
                 (click)="createPollMail()"
                 class="col-12 col-md-auto btn btn-transparent text-primary"
@@ -99,7 +99,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-9">
-            <div class="row g-1 justify-content-end">
+            <div class="row g-1 flex-md-nowrap justify-content-end">
               <button
                 (click)="createAdminMail()"
                 class="col-12 col-md-auto btn btn-transparent text-primary"
