--- a/src/app/poll/mobile-poll-table.component.html
+++ b/src/app/poll/mobile-poll-table.component.html
@@ -87,7 +87,7 @@
             <!-- suggested date -->
             <td class="suggested-date pl-3">
               <div class="row g-0">
-                <div [ngClass]="formHelper.hasAddOrEditParticipantForm() ? 'col-12' : 'col-8'">
+                <div class="col">
                   <app-suggested-date [date]="date" [index]="i"></app-suggested-date>
                 </div>
                 @if (!formHelper.hasAddOrEditParticipantForm()) {
